readme update
el archivo readme quedo desactualizado despues de una doble refactorización,  esta nueva actualización no solo trae la nueva estructura si no que tambien agrega una nueva forma de ejecutar el software utilizando maven.